[project]
name = "dynamo_async"
version = "0.1.0"
description = "Asyncronous DynamoDB Client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.13",
    "msgspec>=0.19.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
